# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  chip-8
include/: chip8.hpp  font.hpp  screen.hpp
src/: chip8.cpp  main.cpp
